Create results/14jms/, plot alpha and correct flow.a
In asym, assign a vector to flow.a, not only one number. Create a directory
14jms for the results, presumably for the pending publication. Plot the vapor
volume fraction alpha over z/L.

--- a/results/14jms/mflow.tex
+++ b/results/14jms/mflow.tex
@@ -8,22 +8,22 @@
 \centerline{Isobutane, $d_1=10$~nm, $L_1 = 20$~µm, $d_2=100$~nm, $L_2=150$~µm.}
 
 \raggedright\noindent
-\includegraphics{public1.eps}
-\includegraphics{public2.eps}\\
+\includegraphics{mflow1.eps}
+\includegraphics{mflow2.eps}\\
 Pressure difference 0.1~bar.
 $p_\mathrm{cond}/p_\mathrm{sat}(\hbox{direction A}) = 0.83$.
 %$p_\mathrm{cond}/p_\mathrm{sat}(\hbox{direction B}) = 0.96$.
 \bigskip
 
-\includegraphics{public3.eps}
-\includegraphics{public4.eps}\\
+\includegraphics{mflow3.eps}
+\includegraphics{mflow4.eps}\\
 Pressure difference 0.5~bar.\bigskip
 $p_\mathrm{cond}/p_\mathrm{sat}(\hbox{direction A}) = 0.80$.
 %$p_\mathrm{cond}/p_\mathrm{sat}(\hbox{direction B}) = 0.91$.
 \bigskip
 
-\includegraphics{public5.eps}
-\includegraphics{public6.eps}\\
+\includegraphics{mflow5.eps}
+\includegraphics{mflow6.eps}\\
 Pressure difference 1.0~bar.\bigskip
 $p_\mathrm{cond}/p_\mathrm{sat}(\hbox{direction A}) = 0.77$.
 %$p_\mathrm{cond}/p_\mathrm{sat}(\hbox{direction B}) = 0.87$.\bigskip
