--- a/results/14jms/phase.tex
+++ b/results/14jms/phase.tex
@@ -1,36 +1,35 @@
-\documentclass{article}
-\usepackage{graphics}
-\usepackage{lmodern}
-%\usepackage[1]{fontenc}
-\usepackage{fontspec}
+\documentclass{minimal}
+\usepackage{graphics,lmodern,fontspec}
+\usepackage[dmyyyy]{datetime}\renewcommand\dateseparator{.}
 \usepackage[a4paper,hmargin=1.2cm,tmargin=2cm,bmargin=3cm]{geometry}
+\makeatletter\def\@oddfoot{\reset@font File 14jms/phase.pdf,
+  created \today\ at \currenttime.\hfil\thepage}\makeatother
 
-\pagestyle{headings}
 \parindent0pt\raggedright
 
 \begin{document}
-{\Large Isobutane, $d_1 = 10$~nm, $L_1 = 20$~µm, $d_2 =
+{\fontsize{12}{10}\selectfont Isobutane, $d_1 = 10$~nm, $L_1 = 20$~µm, $d_2 =
 100$~nm, $L_2 = 150$~µm, $d_3 = 6$~µm, $L_3 = 2$~mm. Vapor volume fraction
 $\alpha$ in the membrane layers.}
 \bigskip
 
-\long\def\putphase#1#2#3{\def\inpres{#3}\def\peqone{1}
- \ifx\inpres\peqone\def\pref{1.0}\else\def\pref{0.#3}\fi
-  \parbox{0.48\linewidth}{\includegraphics{phase#1#2-#3A}\\
+\long\def\putphase#1#2#3{\def\inpres{#3}\def\peqone{1}%
+ \ifx\inpres\peqone\def\pref{1.0}\else\def\pref{0.#3}\fi%
+  \parbox{0.48\linewidth}{\hspace*{-14pt}\includegraphics{phase#1#2-#3A}\kern-16pt\\
   Flow direction A, $p_1-p_2 = #1.#2$~bar, $p_1/p_\mathrm{sat} = \pref$.}
-  \parbox{0.48\linewidth}{\includegraphics{phase#1#2-#3B}\\
+  \parbox{0.48\linewidth}{\hspace*{-14pt}\includegraphics{phase#1#2-#3B}\kern-16pt\\
    Flow direction B, $p_1-p_2= #1.#2$~bar, $p_1/p_\mathrm{sat} = \pref$.}
   \bigskip\par}
 
-\centerline{Pressure difference 0.1~bar.}
-\bigskip
+%\centerline{Pressure difference 0.1~bar.}
+%\bigskip
 
-\putphase01{84}
-\putphase01{85}
-\putphase01{90}
-\putphase01{99}
-\putphase011
-\newpage
+%\putphase01{84}
+%\putphase01{85}
+%\putphase01{90}
+%\putphase01{99}
+%\putphase011
+%\newpage
 
 \centerline{Pressure difference 0.5~bar.}
 \bigskip
@@ -42,12 +41,13 @@ $\alpha$ in the membrane layers.}
 \putphase051
 \newpage
 
-\centerline{Pressure difference 1.0~bar.}
-\bigskip
+%\centerline{Pressure difference 1.0~bar.}
+%\bigskip
+%
+%\putphase10{78}
+%\putphase10{83}
+%\putphase10{88}
+%\putphase10{93}
+%\putphase101
 
-\putphase10{78}
-\putphase10{83}
-\putphase10{88}
-\putphase10{93}
-\putphase101
 \end{document}
